--- a/public_html/scss/abstract/_variable.scss
+++ b/public_html/scss/abstract/_variable.scss
@@ -1,9 +1,9 @@
-$nunColumns : 12;
+$numColumns : 12;
 
 $sizeColumns: (xs, 0px),
-                (sm, 750px),
-                (md, 970px),
-                (lg, 1170px);
+              (sm, 750px),
+              (md, 970px),
+              (lg, 1170px);
 
 $functional-variations:(primary, #337AB7),
                        (success, #5CB85C),
